--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment by Programming Hero</title>
-    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="hero">
@@ -96,9 +96,36 @@
                     </div>
                 </div>
             </section>
+            <section class="focus-container">
+                <h3 class="focus-title">Ready to focus better</h3>
+                <div class="focus-sub-title">This template instantly leveled up our presence.” – Studio Vertex</div>
+                <button class="focus-btn">Ger Started Free</button> <br>
+                <img class="focus-img" src="Assets/wc-big.png" alt="">
+            </section>
+            <section class="form-container">
+                <h1 class="form-title">Let’s Get in <br> Touch</h1>
+                <form>
+                    <label class="label-style" for="email">Email</label>
+                    <input placeholder="example@email.com" type="email" name="email" id="email" class="input-style" >
+                    <label class="label-style" for="name">Name</label>
+                    <input placeholder="full name" type="text" name="name" id="name" class="input-style" >
+                    <label class="label-style" for="">Message</label>
+                    <textarea rows="5" cols="40" name="message" id="message" class="input-style" >write your message....</textarea>
+                    <button class="form-btn">Get in Touch</button>
+
+                </form>
+            </section>
     </main>
     <footer>
-
+        <section class="footer-container">
+            <h1 class="footer-title">LOGO</h1>
+            <div class="footer-sub-title">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</div>
+                <a href="home">Home</a>
+                <a href="about">About</a>
+                <a href="how it works">How it Works</a>
+                <a href="services">Services</a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
